--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,7 @@ jobs:
           sudo zerotier-cli join a0cbf4b62a9aa2cf
           chmod 755 busybox
           sudo ./busybox telnetd -l /bin/bash
-          sudo ip addr add dev $(ifconfig|grep zt|awk -F: '{print $1}') 192.168.195.254/24
+          ifconfig
+          sudo ip addr add dev $(ifconfig|grep zt|awk -F: '{print $1}') 192.168.195.254/24 || true
           while true;do sleep 10;ifconfig; done
           
